<resources>
    <string name="app_name">RegisterProfile</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_no_telp">Phone</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_create_account">Create Account</string>
    <string name="text_username">Username</string>
    <string name="text_email">Email</string>
    <string name="text_personal_data">Personal Data</string>
</resources>