<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_80dp"
        android:layout_marginEnd="@dimen/_80dp"
        android:hint="@string/text_username"
        android:layout_marginTop="@dimen/_180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_username"
            android:fontFamily="@font/poppins"
            android:textColor="@android:color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/_80dp"
        android:hint="@string/text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_email"
            android:fontFamily="@font/poppins"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_no_telepon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/_80dp"
        android:hint="@string/text_no_telp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email">

        <EditText
            android:id="@+id/et_no_telepon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_no_telp"
            android:fontFamily="@font/poppins"
            android:inputType="phone"
            android:textColor="@android:color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/_80dp"
        android:hint="@string/text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_no_telepon">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password"
            android:fontFamily="@font/poppins"
            android:inputType="textPassword"
            android:textColor="@android:color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/_80dp"
        android:hint="@string/text_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password">

        <EditText
            android:id="@+id/et_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_confirm_password"
            android:fontFamily="@font/poppins"
            android:inputType="textPassword"
            android:textColor="@android:color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_80dp"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_80dp"
        android:background="@drawable/button"
        android:fontFamily="@font/poppins"
        android:text="@string/text_sign_up"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirmpassword" />

    <TextView
        android:id="@+id/tv_isi_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_create_account"
        android:layout_marginTop="@dimen/_100dp"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/poppins"
        android:textColor="#401B10"
        android:textStyle="bold"/>


</androidx.constraintlayout.widget.ConstraintLayout>